--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "heroku": "^7.0.41",
     "request": "^2.88.2"
   }
 }
